--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "webpack-dev-server": "^2.3.0"
     },
     "dependencies": {
+        "prop-types": "^15.5.4",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
         "rimraf": "^2.6.1"
