--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-    "version": "1.0.0",
-    "author": "milkmidi",
-    "license": "ISC",
-    "name": "typescript-react-webpack",
-    "scripts": {
-        "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base dist",
-        "build": "webpack -p"
-    },
-    "devDependencies": {
-        "autoprefixer-loader": "^3.2.0",
-        "babel-core": "^6.22.1",
-        "babel-eslint": "^7.2.1",
-        "babel-loader": "^6.2.10",
-        "babel-plugin-transform-async-generator-functions": "^6.22.0",
-        "babel-plugin-transform-async-to-generator": "^6.22.0",
-        "babel-plugin-transform-class-properties": "^6.22.0",
-        "babel-plugin-transform-function-bind": "^6.22.0",
-        "babel-plugin-transform-runtime": "^6.22.0",
-        "babel-preset-es2015": "^6.22.0",
-        "babel-preset-react": "^6.22.0",
-        "babel-preset-stage-3": "^6.22.0",
-        "css-loader": "^0.23.1",
-        "eslint": "^3.18.0",
-        "eslint-config-airbnb-base": "^11.1.1",
-        "eslint-import-resolver-webpack": "^0.8.1",
-        "eslint-plugin-html": "^2.0.1",
-        "eslint-plugin-import": "^2.2.0",
-        "eslint-plugin-react": "^6.10.3",
-        "file-loader": "^0.9.0",
-        "gulp": "^3.9.1",
-        "gulp-util": "^3.0.7",
-        "html-webpack-plugin": "^2.28.0",
-        "pug": "^2.0.0-beta11",
-        "pug-html-loader": "^1.1.0",
-        "pug-loader": "^2.3.0",
-        "react-hot-loader": "^3.0.0-beta.6",
-        "react-router-dom": "^4.0.0-beta.7",
-        "run-sequence": "^1.2.2",
-        "style-loader": "^0.13.1",
-        "stylus": "^0.54.5",
-        "stylus-loader": "^2.5.0",
-        "webpack": "^2.2.1",
-        "webpack-dev-server": "^2.3.0"
-    },
-    "dependencies": {
-        "prop-types": "^15.5.4",
-        "react": "^15.4.2",
-        "react-dom": "^15.4.2",
-        "rimraf": "^2.6.1"
-    }
+  "version": "1.0.0",
+  "author": "milkmidi",
+  "license": "ISC",
+  "name": "typescript-react-webpack",
+  "scripts": {
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base dist --port=3000",
+    "build": "webpack -p"
+  },
+  "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-async-generator-functions": "^6.22.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-plugin-html": "^2.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
+    "html-webpack-plugin": "^2.28.0",
+    "pug": "^2.0.0-beta11",
+    "pug-html-loader": "^1.1.0",
+    "pug-loader": "^2.3.0",
+    "react-hot-loader": "^3.0.0-beta.6",
+    "react-router-dom": "^4.0.0-beta.7",
+    "run-sequence": "^1.2.2",
+    "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.5.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.5.4",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "rimraf": "^2.6.1"
+  }
 }
