--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "name": "typescript-react-webpack",
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --devtool eval --progress --colors --hot --content-base dist --port=3000",
-    "p": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p"
+    "p": "NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot",
+    "d": "node js:babel-core/register ./prerender.js"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-async-generator-functions": "^6.22.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
@@ -44,9 +48,11 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "prop-types": "^15.5.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-snapshot": "^1.1.0",
     "rimraf": "^2.6.1"
   }
 }
