--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --devtool eval --progress --colors --hot --content-base dist --port=3000",
     "p": "NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot",
-    "d": "node js:babel-core/register ./prerender.js"
+    "d": "node js:babel-core/register ./prerender.js",
+    "server": "node_modules/.bin/webpack --config webpack.server.config.js"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-async-generator-functions": "^6.22.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
@@ -24,23 +25,23 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.18.0",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.1.1",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-react": "^7.1.0",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.28.0",
-    "pug": "^2.0.0-beta11",
+    "pug": "^2.0.0-rc.2",
     "pug-html-loader": "^1.1.0",
     "pug-loader": "^2.3.0",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-router-dom": "^4.0.0-beta.7",
+    "react-router-dom": "^4.1.1",
     "run-sequence": "^1.2.2",
+    "simple-react-prerender": "^4.1.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
@@ -49,6 +50,8 @@
   },
   "dependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "compression": "^1.6.2",
+    "express": "^4.15.3",
     "prop-types": "^15.5.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
