--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "license": "ISC",
   "name": "typescript-react-webpack",
   "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server --devtool eval --progress --colors --hot --content-base dist --port=3000",
-    "p": "NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot",
-    "d": "node js:babel-core/register ./prerender.js",
-    "server": "node_modules/.bin/webpack --config webpack.server.config.js"
+    "start": "node_modules/.bin/webpack-dev-server --hot --devtool eval --progress",
+    "p": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot"
   },
-  "devDependencies": {
+  "devDependencies": {    
+    "webpack-dev-server": "^2.5.0"
+  },
+  "dependencies": {
     "autoprefixer-loader": "^3.2.0",
-    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -32,7 +32,7 @@
     "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-react": "^7.1.0",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.28.0",
@@ -40,21 +40,20 @@
     "pug-html-loader": "^1.1.0",
     "pug-loader": "^2.3.0",
     "react-router-dom": "^4.1.1",
-    "run-sequence": "^1.2.2",
+    "run-sequence": "^2.0.0",
     "simple-react-prerender": "^4.1.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
-  },
-  "dependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "compression": "^1.6.2",
+    "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "prop-types": "^15.5.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-scripts": "^1.0.10",
     "react-snapshot": "^1.1.0",
     "rimraf": "^2.6.1"
   }
