--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node_modules/.bin/webpack-dev-server --hot --devtool eval --progress",
     "p": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot"
   },
-  "devDependencies": {    
+  "devDependencies": {
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
@@ -15,17 +15,20 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-async-generator-functions": "^6.22.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.5.2",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
     "eslint-config-airbnb-base": "^11.2.0",
@@ -36,19 +39,21 @@
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.28.0",
+    "prop-types": "^15.5.4",
     "pug": "^2.0.0-rc.2",
     "pug-loader": "^2.3.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-snapshot": "^1.1.0",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "webpack": "^3.0.0",    
-    "cross-env": "^5.0.1",
-    "prop-types": "^15.5.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-snapshot": "^1.1.0",
-    "rimraf": "^2.6.1"
+    "webpack": "^3.0.0"
   }
 }
