--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "name": "typescript-react-webpack",
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --hot --devtool eval --progress",
-    "p": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot",
+    "p": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p",
     "generate": "plop --plopfile script/generator/"
   },
   "devDependencies": {
@@ -41,6 +41,7 @@
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.28.0",
+    "prerender-spa-plugin": "^2.0.1",
     "prop-types": "^15.5.4",
     "pug": "^2.0.0-rc.2",
     "pug-loader": "^2.3.0",
