--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "license": "ISC",
   "name": "typescript-react-webpack",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --hot --devtool eval --progress",
+    "start": "cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --hot --devtool eval",
     "p": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p",
     "generate": "plop --plopfile script/generator/"
   },
   "devDependencies": {
-    "babel-preset-react-hmre": "^1.1.1",
     "plop": "^1.8.0",
+    "react-hot-loader": "^3.0.0-beta.7",
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
@@ -24,13 +24,12 @@
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
-    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-3": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
