--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "name": "typescript-react-webpack",
   "scripts": {
     "start": "cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --hot --devtool eval",
-    "p": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p",
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot",
+    "clear": "rimraf ./build",
     "generate": "plop --plopfile script/generator/"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
@@ -37,6 +39,7 @@
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-react": "^7.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
