--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "name": "typescript-react-webpack",
   "scripts": {
     "start": "cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --hot --devtool eval",
-    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot",
+    "build": "npm run clear && cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot",
     "clear": "rimraf ./build",
-    "generate": "plop --plopfile script/generator/"
+    "generator": "plop --plopfile script/generator/"
   },
   "devDependencies": {
     "plop": "^1.8.0",
@@ -42,6 +42,7 @@
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.28.0",
