--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "version": "1.0.0",
   "author": "milkmidi",
-  "license": "ISC",
-  "name": "typescript-react-webpack",
+  "name": "react-webpack",
   "scripts": {
     "start": "cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --hot --devtool eval",
     "build": "npm run clear && cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p && react-snapshot",
@@ -11,11 +10,9 @@
   },
   "devDependencies": {
     "plop": "^1.8.0",
-    "react-hot-loader": "^3.0.0-beta.7",
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
-    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -52,6 +49,7 @@
     "pug-loader": "^2.3.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-snapshot": "^1.1.0",
