--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,22 @@
 {
   "presets": [
-    "env",
+    ["env", {
+      "modules": false,
+      "useBuiltIn": true,
+      "targets": {
+        "browsers": [
+          "> 1%",
+          "last 2 versions",
+          "not ie < 11",
+          "ios 9",
+          "not ie_mob 10",
+          "not and_uc <= 11.4",
+          "not bb < 10",
+          "not op_mob <= 12",
+          "not Android < 4.4"
+        ]
+      }
+    }],
     "stage-0",
     "react"
   ],
