--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
