--- a/.babelrc
+++ b/.babelrc
@@ -21,6 +21,9 @@
     "react"
   ],
   "plugins": [
-    "transform-runtime"
+    ["transform-runtime", {
+      "helpers": false,
+      "polyfill": false
+    }]
   ]
 }
