--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-dev-server": "^2.5.0"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -56,6 +57,7 @@
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
+    "static-render-webpack-plugin": "^0.1.2",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
