--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.30.1",
+    "pixi.js": "^4.5.5",
     "prop-types": "^15.5.4",
     "pug": "^2.0.0-rc.3",
     "pug-loader": "^2.3.0",
@@ -53,6 +54,7 @@
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
     "run-sequence": "^2.0.0",
+    "scriptjs": "^2.5.8",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.18.2",
     "stylus": "^0.54.5",
