--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "author": "milkmidi",
   "name": "react-webpack",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node_modules/.bin/webpack-dev-server --hot --devtool eval",
-    "build": "npm run clear && cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p --hide-modules",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --hot --devtool eval",
+    "build": "npm run clear && cross-env NODE_ENV=production webpack --progress -p --hide-modules",
     "build-snapshot": "npm run build && react-snapshot",
     "clear": "rimraf ./build",
     "generator": "plop --plopfile script/generator/"
@@ -20,7 +20,9 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-react-pug": "^3.2.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "1.6.0",
@@ -41,6 +43,8 @@
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.30.1",
+    "install": "^0.10.1",
+    "npm": "^5.4.0",
     "pixi.js": "^4.5.5",
     "prop-types": "^15.5.4",
     "pug": "^2.0.0-rc.3",
@@ -49,7 +53,10 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-router-page-transition": "^3.0.2",
+    "react-router-transition": "^1.0.0",
     "react-snapshot": "^1.1.0",
+    "react-transition-group": "^2.2.0",
     "redux": "^3.7.1",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
@@ -57,6 +64,7 @@
     "scriptjs": "^2.5.8",
     "static-site-generator-webpack-plugin": "^3.4.1",
     "style-loader": "^0.18.2",
+    "styled-components": "^2.1.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "webpack": "^3.4.1"
