not support react router

--- a/.babelrc
+++ b/.babelrc
@@ -22,6 +22,7 @@
     "react"
   ],
   "plugins": [
+    "universal-import",
     ["transform-runtime", {
       "helpers": false,
       "polyfill": false
