--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build-server": "cross-env NODE_ENV=production webpack --config internal/webpack/webpack.server.js --progress -p --hide-modules",
     "build": "npm run clear && cross-env NODE_ENV=production webpack --progress -p --hide-modules",
     "build-snapshot": "npm run build && react-snapshot",
+    "ssr": "node internal/script/ssr",
     "clear": "rimraf ./build",
     "generator": "plop --plopfile script/generator/"
   },
@@ -25,6 +26,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-react-pug": "^3.2.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-universal-import": "^1.2.7",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "^6.22.0",
