--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pug-loader": "^2.3.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.0.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-snapshot": "^1.1.0",
