--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
+    "jsx": "react",
     "baseUrl": "./",
     "paths": {
       "~/*": ["*"],
