--- a/package.json
+++ b/package.json
@@ -1,70 +1,90 @@
 {
+  "name": "react_template",
   "version": "1.0.0",
-  "author": "milkmidi",
-  "name": "react-webpack",
+  "description": "react-template",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --hot --devtool eval",
-    "build": "npm run clear && cross-env NODE_ENV=production webpack --progress -p --hide-modules",
-    "build-snapshot": "npm run build && react-snapshot",
-    "clear": "rimraf ./build",
-    "generator": "plop --plopfile script/generator/"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress -p",
+    "flow": "flow",
+    "jest": "jest"
   },
+  "author": "milkmidi",
   "devDependencies": {
-    "plop": "^1.9.0",
-    "webpack-dev-server": "^2.9.1"
-  },
-  "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-react-transform": "^2.0.2",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-react-pug": "^3.2.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "1.6.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "chalk": "^2.0.1",
+    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.16",
-    "cross-env": "^5.0.3",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.1.1",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.6.1",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.7",
+    "copy-webpack-plugin": "^4.0.1",
+    "es6-promise": "^4.1.0",
+    "eslint": "^4.19.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-plugin-compat": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "flow-bin": "^0.69.0",
     "gulp": "^3.9.1",
+    "gulp-changed": "^3.1.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-size": "^3.0.0",
     "gulp-util": "^3.0.7",
-    "html-webpack-plugin": "^2.30.1",
-    "install": "^0.10.1",
-    "pixi.js": "^4.5.5",
-    "prop-types": "^15.5.4",
-    "pug": "^2.0.0-rc.4",
+    "gulp.spritesmith": "^6.2.1",
+    "jest": "^22.4.3",
+    "html-loader": "^0.5.0",
+    "html-webpack-plugin": "^3.2.0",
+    "imagemin-gifsicle": "^5.1.0",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-mozjpeg": "^7.0.0",
+    "imagemin-optipng": "^5.2.1",
+    "imagemin-pngquant": "^5.0.0",
+    "imagemin-svgo": "^6.0.0",
+    "lint-staged": "^7.0.4",
+    "merge": "^1.2.0",
+    "merge-stream": "^1.0.1",
+    "postcss": "^6.0.6",
+    "postcss-loader": "^2.0.6",
+    "pug": "^2.0.0-beta11",
+    "pug-html-loader": "^1.0.9",
     "pug-loader": "^2.3.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-hot-loader": "^3.0.0",
+    "plop": "^2.0.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-hot-loader": "^4.0.1",
     "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "react-snapshot": "^1.1.0",
-    "react-transition-group": "^2.2.1",
-    "redux": "^3.7.1",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "rimraf": "^2.6.2",
-    "run-sequence": "^2.2.0",
-    "scriptjs": "^2.5.8",
-    "static-site-generator-webpack-plugin": "^3.4.1",
-    "style-loader": "^0.19.0",
-    "styled-components": "^2.1.2",
+    "rimraf": "^2.5.4",
+    "run-sequence": "^2.0.0",
+    "script-ext-html-webpack-plugin": "^2.0.1",
+    "style-loader": "^0.20.3",
+    "styled-components": "^3.2.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "webpack": "^3.6.0"
-  }
+    "url-loader": "^1.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "webpack-dev-server": "^2.6.1",
+    "webpack": "^3.5.5"
+  },
+  "dependencies": {}
 }
