--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react-template",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress -p",
+    "build": "cross-env NODE_ENV=production webpack --progress",
     "flow": "flow",
     "jest": "jest"
   },
@@ -20,15 +20,15 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
     "chalk": "^2.0.1",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.16",
+    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.7",
-    "copy-webpack-plugin": "^4.0.1",
     "es6-promise": "^4.1.0",
     "eslint": "^4.19.0",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -38,10 +38,10 @@
     "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.6.1",
     "flow-bin": "^0.69.0",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
     "gulp-imagemin": "^4.1.0",
@@ -49,7 +49,6 @@
     "gulp-size": "^3.0.0",
     "gulp-util": "^3.0.7",
     "gulp.spritesmith": "^6.2.1",
-    "jest": "^22.4.3",
     "html-loader": "^0.5.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-gifsicle": "^5.1.0",
@@ -58,15 +57,16 @@
     "imagemin-optipng": "^5.2.1",
     "imagemin-pngquant": "^5.0.0",
     "imagemin-svgo": "^6.0.0",
+    "jest": "^22.4.3",
     "lint-staged": "^7.0.4",
     "merge": "^1.2.0",
     "merge-stream": "^1.0.1",
+    "plop": "^2.0.0",
     "postcss": "^6.0.6",
     "postcss-loader": "^2.0.6",
     "pug": "^2.0.0-beta11",
     "pug-html-loader": "^1.0.9",
     "pug-loader": "^2.3.0",
-    "plop": "^2.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-hot-loader": "^4.0.1",
@@ -83,8 +83,11 @@
     "stylus-loader": "^3.0.1",
     "url-loader": "^1.0.1",
     "vinyl-buffer": "^1.0.0",
-    "webpack-dev-server": "^2.6.1",
-    "webpack": "^3.5.5"
+    "webpack-cli": "^2.0.14"
   },
-  "dependencies": {}
+  "dependencies": {
+    "redux-observable": "^0.18.0",
+    "webpack": "^4.5.0",
+    "webpack-dev-server": "^3.1.3"
+  }
 }
