--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "milkmidi",
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-module-resolver": "^3.1.1",
@@ -23,7 +23,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
-    "chalk": "^2.0.1",
+    "chalk": "^2.4.0",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
@@ -34,13 +34,13 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.9.0",
     "eslint-plugin-compat": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-flowtype": "^2.46.2",
     "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "flow-bin": "^0.69.0",
+    "flow-bin": "^0.70.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
@@ -57,28 +57,29 @@
     "imagemin-optipng": "^5.2.1",
     "imagemin-pngquant": "^5.0.0",
     "imagemin-svgo": "^6.0.0",
+    "immutable": "^3.8.2",
     "jest": "^22.4.3",
     "lint-staged": "^7.0.4",
     "merge": "^1.2.0",
     "merge-stream": "^1.0.1",
     "plop": "^2.0.0",
     "postcss": "^6.0.6",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.1.4",
     "pug": "^2.0.0-beta11",
     "pug-html-loader": "^1.0.9",
     "pug-loader": "^2.3.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-hot-loader": "^4.0.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.1.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.4",
     "run-sequence": "^2.0.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.20.3",
-    "styled-components": "^3.2.5",
+    "styled-components": "^3.2.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "url-loader": "^1.0.1",
@@ -87,7 +88,8 @@
   },
   "dependencies": {
     "redux-observable": "^0.18.0",
-    "webpack": "^4.5.0",
+    "rxjs": "^5.5.10",
+    "webpack": "^4.6.0",
     "webpack-dev-server": "^3.1.3"
   }
 }
