--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress --hot",
     "build": "cross-env NODE_ENV=production webpack --progress",
+    "plop": "plop --plopfile ./internal/generator/index.js",
     "flow": "flow",
     "jest": "jest"
   },
@@ -62,6 +63,8 @@
     "lint-staged": "^7.0.4",
     "merge": "^1.2.0",
     "merge-stream": "^1.0.1",
+    "mini-css-extract-plugin": "^0.4.0",
+    "pixi.js": "^4.7.3",
     "plop": "^2.0.0",
     "postcss": "^6.0.6",
     "postcss-loader": "^2.1.4",
@@ -71,6 +74,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.1.0",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
@@ -78,6 +82,7 @@
     "rimraf": "^2.5.4",
     "run-sequence": "^2.0.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
+    "scriptjs": "^2.5.8",
     "style-loader": "^0.20.3",
     "styled-components": "^3.2.6",
     "stylus": "^0.54.5",
