--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "react-template",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress --hot",
+    "https": "cross-env NODE_ENV=development webpack-dev-server --progress --hot --https",
     "build": "cross-env NODE_ENV=production webpack --progress",
     "plop": "plop --plopfile ./internal/generator/index.js",
     "flow": "flow",
@@ -24,6 +25,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
+    "ccapture.js": "^1.1.0",
     "chalk": "^2.4.0",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.16",
