--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "chalk": "^2.4.0",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.7",
     "es6-promise": "^4.1.0",
@@ -91,7 +91,8 @@
     "stylus-loader": "^3.0.1",
     "url-loader": "^1.0.1",
     "vinyl-buffer": "^1.0.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "weinre-webpack-plugin": "^2.0.3"
   },
   "dependencies": {
     "redux-observable": "^0.18.0",
