--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.24.1",
-    "ccapture.js": "^1.1.0",
     "chalk": "^2.4.0",
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.16",
@@ -34,25 +33,24 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.7",
     "es6-promise": "^4.1.0",
-    "eslint": "^4.19.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.9.0",
     "eslint-plugin-compat": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.46.2",
+    "eslint-plugin-flowtype": "^2.46.3",
     "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "eslint": "^4.19.0",
     "file-loader": "^1.1.11",
     "flow-bin": "^0.70.0",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "gulp": "^3.9.1",
     "gulp-changed": "^3.1.0",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.4.0",
     "gulp-size": "^3.0.0",
     "gulp-util": "^3.0.7",
     "gulp.spritesmith": "^6.2.1",
+    "gulp": "^3.9.1",
     "html-loader": "^0.5.0",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-gifsicle": "^5.1.0",
@@ -64,42 +62,39 @@
     "immutable": "^3.8.2",
     "jest": "^22.4.3",
     "lint-staged": "^7.0.4",
-    "merge": "^1.2.0",
     "merge-stream": "^1.0.1",
     "mini-css-extract-plugin": "^0.4.0",
     "pixi.js": "^4.7.3",
     "plop": "^2.0.0",
-    "postcss": "^6.0.6",
     "postcss-loader": "^2.1.4",
-    "pug": "^2.0.0-beta11",
+    "postcss": "^6.0.6",
     "pug-html-loader": "^1.0.9",
     "pug-loader": "^2.3.0",
-    "react": "^16.3.2",
+    "pug": "^2.0.0-beta11",
     "react-dom": "^16.3.2",
-    "react-hot-loader": "^4.1.0",
+    "react-hot-loader": "^4.1.1",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
+    "react-router-prop-types": "^1.0.3",
+    "react": "^16.3.2",
+    "redux-observable": "^0.18.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.4",
-    "run-sequence": "^2.0.0",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "scriptjs": "^2.5.8",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "styled-components": "^3.2.6",
-    "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "stylus": "^0.54.5",
     "url-loader": "^1.0.1",
     "vinyl-buffer": "^1.0.0",
     "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3",
+    "webpack": "^4.6.0",
     "weinre-webpack-plugin": "^2.0.3"
   },
   "dependencies": {
-    "react-router-prop-types": "^1.0.3",
-    "redux-observable": "^0.18.0",
-    "rxjs": "^5.5.10",
-    "webpack": "^4.6.0",
-    "webpack-dev-server": "^3.1.3"
+    "rxjs": "^5.5.10"
   }
 }
