--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "reactSnap": {
     "source": "dist",
+    "skipThirdPartyRequests": true,
+    "allowedThirdPartyDomains": ["https://cdnjs.cloudflare.com"],
     "minifyHtml": {
       "collapseWhitespace": false,
       "removeComments": false
