--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
+    "css-hot-loader": "^1.4.2",
     "css-loader": "^1.0.1",
     "es6-promise": "^4.2.4",
     "eslint": "^4.19.0",
